[package]
name = "socks5-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
lexopt = "0.2.0"
anyhow = "1.0.53"
log = "0.4.8"
env_logger = "0.9.0"